# apl-portable-ap

./: .gitignore  README.md  Windows.md
xfsrc/: CMakeLists.txt  ademo.c  alloca_h.h  apl.h  apllimits.h  apltypes.h  array.c  charfns.h  d_machin.h  data.c  data.h  datecodes.h  decf.h  decf_lib.h  dyalog.c  dyalog.rc  eltypes.h  error.h  example.c  example.makefile  getch.h  gfns.h  io_maps.h  keystrokes.h  machine.h  make.aps  makefile  maths.h  mk_cc  mk_drc  mk_lnk  mk_lnk_ap  mk_lnk_linux  ourdirent.h  outcodes.h  quadav.h  regexpav.h  resolve.h  strand.c  support.h  (+7 more)
xfsrc/linux/: port.h
xfsrc/win/: port.h
